Small progres fixes & overflow ourWork fixed

--- a/src/components/OurWork/our-work.scss
+++ b/src/components/OurWork/our-work.scss
@@ -16,7 +16,7 @@
 }
 
 .imac{
-  width: 350px;
+  width: 300px;
   max-width: 95vw;
 }
 .pca-hold .pca-main {
@@ -190,7 +190,9 @@ body {
 }
 
 @screen sm{
-
+.imac{
+  width: 300px;
+}
 }
 @screen md{
 
